--- a/DESAFIOS/desafio11/style.css
+++ b/DESAFIOS/desafio11/style.css
@@ -5,15 +5,21 @@
     padding: 0;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&family=Sriracha&display=swap');
+
 :root {
+    --font1: verdana, Geneva, Tahoma, sans-serif;
     --font-principla: "Passion One", sans-serif;
-    --font-secundaria: "Sriracha", cursiva;
+    --font-secundaria: "Sriracha", cursive;
 }
 
 h1 {
     font-family: var(--font-principla);
     font-weight: bold;
     font-variant: small-caps;
+    font-size: 4em;
 }
 
 p {
@@ -51,9 +57,10 @@ header a:hover {
     background-image: url('imagens/joaninha.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center center;
+    background-position: right center;
     background-attachment: fixed;
     padding: 50px 0px 50px 30px;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.548);
 }
 
 .secundaria {
@@ -81,8 +88,9 @@ header a:hover {
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-position: center center;
+    background-position: right center;
     padding: 50px 0px 50px 30px;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.548);
 }
 
 .quarta-parte {
